--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'org.osmdroid:osmdroid-android:6.1.14'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.mockito:mockito-core:4.8.1"
     androidTestImplementation "org.mockito:mockito-android:4.8.1"
