--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+
+
 android {
     namespace 'de.gruppe.e.klingklang'
     compileSdk 32
@@ -40,6 +42,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+
 }
 
 dependencies {
@@ -54,4 +57,6 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-android:4.8.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.arthenica:ffmpeg-kit-full:4.5.1-1'
+    implementation 'com.github.HBiSoft:HBRecorder:2.0.5'
 }
