--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,12 @@
         android:roundIcon="@mipmap/ic_product_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KlingKlang"
-        tools:targetApi="31">#
+        tools:targetApi="31">
+
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.myapp.fileprovider"
-            android:exported="false"
+            android:authorities="de.gruppe.e.klingklang.view.TrackSelectionMenus.fileprovider"
+            android:exported="true"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
