--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,5 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-android:4.8.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.arthenica:ffmpeg-kit-full:4.5.1-1'
+    implementation 'com.arthenica:ffmpeg-kit-full-gpl:5.1'
 }
